--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
-agp = "8.3.0-beta02"
+agp = "8.3.0-rc02"
 kotlin = "1.9.22"
 activity-compose = "1.8.2"
 lifecycle = "2.7.0"
-compose-bom = "2023.10.01"
+compose-bom = "2024.02.00"
 material = "1.11.0"
+documentfile = "1.0.1"
 appcompat = "1.6.1"
 hilt = "2.48.1"
 hilt-navigation-compose = "1.1.0"
@@ -31,6 +32,7 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
+documentfile = { module = "androidx.documentfile:documentfile", version.ref = "documentfile" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
